--- a/src/components/members/members.css
+++ b/src/components/members/members.css
@@ -31,7 +31,7 @@
     height: 300px;
     width: 300px;
     border-radius: 40px;
-    background: rgb(5, 7, 37) url(../props/Ferhat.jpeg);
+    background: rgb(5, 7, 37) url(../props/berk.jpeg);
     background-size: cover;
     background-position: center;
     border: 2px solid var(--color-sec-light);
